# solrps

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  _scaffold.md  create-completed-period.js  create-fresh-period.js  debug-current-state.js  enhanced-distribute-with-rollover.js  get-periods.js  init-weekly-rewards.js  next.config.mjs  package-lock.json  package.json  reset-to-active.js  split-scaffold.mjs  tailwind.config.ts  test-manual-distribution.js  tsconfig.json  vercel.json
app/: layout.tsx  page.tsx
app/api/: _utils.ts
app/api/cleanup/: route.ts
app/api/dev/claim/: route.ts
app/api/leaderboard/: route.ts
app/api/lobby/: route.ts
app/api/me/matches/: route.ts
app/api/session/[id]/: route.ts
app/api/session/cancel/: route.ts
app/api/session/create/: route.ts
app/api/session/forfeit/: route.ts
app/api/session/join/: route.ts
app/api/session/my/: route.ts
app/api/session/reveal/: route.ts
app/api/user/[userId]/: route.ts
app/api/user/create/: route.ts
app/api/weekly/auto-distribute/: route.ts
app/api/weekly/claim/: route.ts
app/api/weekly/distribute/: route.ts
app/components/: Navigation.tsx
app/leaderboard/: page.tsx
app/lobby/: page.tsx
app/my/: page.tsx
app/play/: page.tsx
instructions/: Cargo.toml  create_game.rs
prisma/: schema.prisma  seed.js  seed.ts
prisma/migrations/: add_phase2_support.sql  add_wallet_address.sql
prisma/migrations/20250911185541_init_postgresql/: migration.sql
scripts/: debug-weekly-setup.js  fix-weekly-period.js  init-weekly-rewards.js
src/app/: layout.tsx
src/app/api/: _utils.ts
src/app/api/me/matches/: route.ts
src/app/api/session/: route.ts
src/app/api/session/forfeit/: route.ts
src/app/api/session/join/: route.ts
src/app/api/session/reveal/: route.ts
src/app/leaderboard/: page.tsx  route.s
src/app/my/: page.tsx
src/components/: ClientWalletProvider.tsx  GameModeIndicator.tsx  GameResultsModal.tsx  JoinSessionModal.tsx  Navigation.tsx  ProperWalletProvider.tsx  RevealModal.tsx  SolanaWalletProvider.tsx  WalletDebugInfo.tsx  WalletGuard.tsx
src/config/: constants.ts
src/hooks/: useGameService.ts  useGameWallet.ts  useSolanaWallet.ts
src/lib/: api-helpers.ts  db.ts  env.ts  hash.ts  payout.ts  rps.ts  secret.ts  weekly.ts  zod.ts
src/lib/state/: wallet.ts
src/services/: GameService.ts
src/state/: wallet.ts
tests/api/: session.test.ts
tests/unit/: rps.test.ts
