// Cargo.toml - Anchor workspace configuration
[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

// programs/solrps/Cargo.toml
[package]
name = "solrps"
version = "0.1.0"
description = "Rock Paper Scissors on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solrps"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang